--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
 		<hadoop.version>2.7.1</hadoop.version>
 		<spark.version>1.4.1</spark.version>
 		<slf4j.version>1.7.7</slf4j.version>
-		<kafka.version>0.8.2.1</kafka.version>
+		<kafka.version>0.8.2.2</kafka.version>
+		<hive.version>1.2.1</hive.version>
+		<flume.version>1.6.0</flume.version>
 	</properties>
 
 	<repositories>
@@ -102,7 +104,11 @@
 			<artifactId>spark-hive_2.11</artifactId>
 			<version>${spark.version}</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-network-common_2.11</artifactId>
+			<version>${spark.version}</version>
+		</dependency>		
 		
 		<!-- Hadoop -->
 		<dependency>
@@ -154,18 +160,40 @@
 			<version>1.1.0</version>
 			<classifier>hadoop2</classifier>
 		</dependency>
-		
-		
+	
+		<!-- Hive -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.35</version>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-cli</artifactId>
+			<version>${hive.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-network-common_2.11</artifactId>
-			<version>${spark.version}</version>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-jdbc</artifactId>
+			<version>${hive.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-exec</artifactId>
+			<version>${hive.version}</version>
+		</dependency>				
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-metastore</artifactId>
+			<version>${hive.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-shims</artifactId>
+			<version>${hive.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hive</groupId>
+			<artifactId>hive-service</artifactId>
+			<version>${hive.version}</version>
+		</dependency>		
+
+		<!-- Kafka -->
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka_2.11</artifactId>
@@ -176,6 +204,44 @@
 			<artifactId>kafka-clients</artifactId>
 			<version>${kafka.version}</version>
 		</dependency>
+		
+		<!-- Thrift -->
+		<dependency>
+			<groupId>org.apache.thrift</groupId>
+			<artifactId>libthrift</artifactId>
+			<version>0.9.2</version>
+		</dependency>
+
+		<!-- HBase -->
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-client</artifactId>
+			<version>1.0.1.1</version>
+		</dependency>
+		
+		<!-- Flume -->
+		<dependency>
+			<groupId>org.apache.flume</groupId>
+			<artifactId>flume-ng-core</artifactId>
+			<version>${flume.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flume</groupId>
+			<artifactId>flume-ng-sdk</artifactId>
+			<version>${flume.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.flume</groupId>
+			<artifactId>flume-ng-configuration</artifactId>
+			<version>${flume.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.35</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
