--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
-			<scope>test</scope>
+			<!--<scope>test</scope>-->
 		</dependency>
 		
 		<!-- Logging with SLF4J & LogBack -->
