--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,12 @@
 			<artifactId>spark-network-common_2.11</artifactId>
 			<version>${spark.version}</version>
 		</dependency>		
-		
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-network-shuffle_2.11</artifactId>
+			<version>${spark.version}</version>
+		</dependency>
+				
 		<!-- Hadoop -->
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
@@ -241,6 +246,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.35</version>
 		</dependency>
+
 
 	</dependencies>
 
