--- a/spark-2.x/pom.xml
+++ b/spark-2.x/pom.xml
@@ -21,6 +21,8 @@
 		<!-- Modules that copy jars to the build directory should do so under this 
 			location. -->
 		<jars.target.dir>${project.build.directory}/scala-${scala.binary.version}/jars</jars.target.dir>
+
+		<mysql-connector.version>5.1.41</mysql-connector.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -131,6 +133,12 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.4.12</version>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql-connector.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
